--- a/cart-management/checkoutPage.html
+++ b/cart-management/checkoutPage.html
@@ -11,7 +11,7 @@
 </head>
 <body onload="getValues()">
 
-<h2>DOM Operation</h2>
+<h2>Checkout</h2>
 <form>
     <hr/>
     <table id="shoppingList">
